# docker-model-app

./: .gitignore  Makefile  README.md  pyproject.toml
docker_model_app/: app.py
