[tool.poetry]
name = "docker-model-app"
version = "0.1.0"
description = ""
authors = ["FumitakaIwaki <iwaki2323a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
